# Google-Docs-To-Clean-HTML

./: .gitignore  LICENSE  README.md  cleaned_html.html  example.py  pyproject.toml  setup.py
examples/: example.py  jacobs_config.py
gdtch/: __init__.py  exceptions.py
gdtch/mixins/: add_attributes.py  add_elements.py  alter_attributes.py  alter_text.py  clean_attributes.py  clean_text.py  multiline_transform.py  remove_extra_tags.py  remove_junk_tags.py  remove_top_of_document.py
