[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "gdtch"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "cssutils>=2.11.1",
    "lxml>=5.4.0",
]


[tool.setuptools.packages.find]
include = ["gdtch"]
